dbhelper/kube-svc-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-helper-api
  labels:
    app: db-helper-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db-helper-api
  template:
    metadata:
      labels:
        app: db-helper-api
    spec:
      containers:
        - name: db-helper-api
          image: ghcr.io/babbage88/dbhelperapi:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8181
          resources:
            limits:
              memory: "1Gi" # 256 MiB memory
            requests:
              cpu: "500m" # Request 0.25 CPU initially
              memory: "256Mi" # Request 128 MiB memory initially
---
apiVersion: v1
kind: Service
metadata:
  name: db-helper-api-csvc
spec:
  selector:
    app: db-helper-api
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
  type: ClusterIP
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: db-helper-api-service
#spec:
#  type: LoadBalancer
#  allocateLoadBalancerNodePorts: false
#  externalTrafficPolicy: Cluster
#  selector:
#    app: db-helper-api
#  ports:
#    - name: db-helper-api
#      port: 8181
#      targetPort: 8181
#      protocol: TCP
